--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
   <!-- ...existing meta and title code... -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Silvio Torre - Broad IT, AI, DevOps & Cloud Certified Professional with 15+ active certifications. Explore bio, work, and certifications.">
+<meta name="x-hacker" content="If you're reading this, If you're reading this, you don't need glasses and should check out https://youtu.be/Ex-_6c4tSK8?t=90.">
+
+<meta property="og:title" content="Silvio Torre">
+<meta property="og:description" content="Broad IT, AI, DevOps & Cloud Certified Professional with 15+ active certifications.">
+<meta property="og:image" content="media/silvio_torre_seaside.jpg">
+<meta property="og:url" content="https://silviotorre.github.io/">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Silvio Torre">
+<meta name="twitter:description" content="Broad IT, AI, DevOps & Cloud Certified Professional with 15+ active certifications.">
+<meta name="twitter:image" content="media/silvio_torre_seaside.jpg">
+
+
+
   <title>Silvio Torre</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <header>
