fix in html head for open graph

--- a/index.html
+++ b/index.html
@@ -4,18 +4,38 @@
   <!-- ...existing meta and title code... -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Silvio Torre - Broad IT, AI, DevOps & Cloud Certified Professional with 15+ active certifications. Explore bio, work, and certifications.">
-<meta name="x-hacker" content="If you're reading this, If you're reading this, you don't need glasses and should check out https://youtu.be/Ex-_6c4tSK8?t=90.">
 
+<!-- Titolo e descrizione generale per i motori di ricerca -->
+<meta name="description" content="Silvio Torre – Multi-certified IT Professional specializing in Azure, DevOps, AI, and Security. Holder of 15+ certifications, including Azure Solutions Architect Expert, Azure DevOps Engineer Expert, and ISO/IEC 27001 Associate. Explore projects, insights, and solutions.">
+
+<!-- Informazione informale per i curiosi -->
+<meta name="x-hacker" content="If you're reading this, you clearly have keen eyes. Check out https://youtu.be/Ex-_6c4tSK8?t=90 for a surprise.">
+
+<!-- Nome autore e copyright -->
+<meta name="author" content="Silvio Torre">
+<meta name="copyright" content="Copyright © 2023 Silvio Torre. All rights reserved.">
+
+<!-- Open Graph / Facebook / LinkedIn / WhatsApp -->
 <meta property="og:title" content="Silvio Torre">
-<meta property="og:description" content="Broad IT, AI, DevOps & Cloud Certified Professional with 15+ active certifications.">
-<meta property="og:image" content="media/silvio_torre_seaside.jpg">
+<meta property="og:description" content="Azure Solutions Architect Expert, DevOps Engineer Expert, AI Engineer, and Scrum Professional Foundation holder with 15+ active certifications. Empowering secure, scalable solutions.">
+<meta property="og:image" content="https://silviotorre.github.io/media/silvio_torre_seaside.jpg">
 <meta property="og:url" content="https://silviotorre.github.io/">
 <meta property="og:type" content="website">
+<meta property="og:site_name" content="Silvio Torre">
+<meta property="og:locale" content="en_US">
+
+<!-- Twitter Cards -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Silvio Torre">
-<meta name="twitter:description" content="Broad IT, AI, DevOps & Cloud Certified Professional with 15+ active certifications.">
-<meta name="twitter:image" content="media/silvio_torre_seaside.jpg">
+<meta name="twitter:description" content="Certified IT professional with broad Azure, DevOps, AI, and Security expertise. Over 15 credentials, including ISO/IEC 27001. Explore my work and achievements.">
+<meta name="twitter:image" content="https://silviotorre.github.io/media/silvio_torre_seaside.jpg">
+
+<!-- (Facoltativo) Impostazione del colore per mobile browser -->
+<meta name="theme-color" content="#ffffff">
+
+<!-- (Facoltativo) Link canonico per SEO -->
+<link rel="canonical" href="https://silviotorre.github.io/">
+
 
 
 
@@ -31,15 +51,14 @@
     <h3>Broad IT, AI, DevOps & Cloud Certified Professional - 15+ Active Certifications.</h3>
   </header>
   <main>
-    <div class="content">
+    <div class="content" style="max-width: 800px; margin: 0 auto;">
       <div class="left-column">
         <!-- Note: adjust extension if needed -->
-        <img src="media/silvio_torre_seaside.jpg" alt="Silvio Torre">
+        <img src="media/silvio_torre_seaside.jpg" alt="Silvio Torre, Neaples">
       </div>
       <div class="right-column">
         <nav>
-
-          <ul>
+          <ul></ul>
             <li><a href="#" data-text="bio">bio</a></li>
             <li><a href="#" data-text="work">work</a></li>
             <li><a href="#" data-text="certifications">relevant certifications</a></li>
