--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
     <h3>Broad IT, AI, DevOps & Cloud Certified Professional - 15+ Active Certifications.</h3>
   </header>
   <main>
-    <div class="content" style="max-width: 800px; margin: 0 auto;">
+    <div class="content">
       <div class="left-column">
         <!-- Note: adjust extension if needed -->
         <img src="media/silvio_torre_seaside.jpg" alt="Silvio Torre, Neaples">
       </div>
       <div class="right-column">
         <nav>
-          <ul></ul>
+          <ul>
             <li><a href="#" data-text="bio">bio</a></li>
             <li><a href="#" data-text="work">work</a></li>
             <li><a href="#" data-text="certifications">relevant certifications</a></li>
