--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <!-- Open Graph / Facebook / LinkedIn / WhatsApp -->
 <meta property="og:title" content="Silvio Torre">
-<meta property="og:description" content="Azure Solutions Architect Expert, DevOps Engineer Expert, AI Engineer, and Scrum Professional Foundation holder with 15+ active certifications. Empowering secure, scalable solutions.">
+<meta property="og:description" content="Azure Cybersecurity and Architect Expert, DevOps Engineer Expert, AI Engineer, and Scrum product owner with 15+ active certifications. Empowering rich, secure and scalable cloud solutions.">
 <meta property="og:image" content="https://silviotorre.github.io/media/silvio_torre_seaside.jpg">
 <meta property="og:url" content="https://silviotorre.github.io/">
 <meta property="og:type" content="website">
