--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Titolo e descrizione generale per i motori di ricerca -->
-<meta name="description" content="Silvio Torre – Multi-certified IT Professional specializing in Azure, DevOps, AI, and Security. Holder of 15+ certifications, including Azure Solutions Architect Expert, Azure DevOps Engineer Expert, and ISO/IEC 27001 Associate. Explore projects, insights, and solutions.">
+<meta name="description" content="Silvio Torre – Multi-certified IT Professional specializing in Azure, DevOps, AI, and Security. Holder of 15+ certifications, including Azure Solutions Architect Expert, Azure DevOps Engineer Expert, Microsoft CyberSecurity Architect Expert and ISO/IEC 27001 Associate. Explore projects, insights, and solutions.">
 
 <!-- Informazione informale per i curiosi -->
 <meta name="x-hacker" content="If you're reading this, you clearly have keen eyes. Check out https://youtu.be/Ex-_6c4tSK8?t=90 for a surprise.">
