as in today backlog

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Titolo e descrizione generale per i motori di ricerca -->
+<!-- Titolo e descrizione generale per motori di ricerca -->
 <meta name="description" content="Silvio Torre – Multi-certified IT Professional specializing in Azure, DevOps, AI, and Security. Holder of 15+ certifications, including Azure Solutions Architect Expert, Azure DevOps Engineer Expert, Microsoft CyberSecurity Architect Expert and ISO/IEC 27001 Associate. Explore projects, insights, and solutions.">
 
 <!-- Informazione informale per i curiosi -->
@@ -16,7 +16,7 @@
 <meta name="copyright" content="Copyright © 2023 Silvio Torre. All rights reserved.">
 
 <!-- Open Graph / Facebook / LinkedIn / WhatsApp -->
-<meta property="og:title" content="Silvio Torre">
+<meta property="og:title" content="Silvio Torre: Tech, without getting lost.">
 <meta property="og:description" content="Azure Cybersecurity and Architect Expert, DevOps Engineer Expert, AI Engineer, and Scrum product owner with 15+ active certifications. Empowering rich, secure and scalable cloud solutions.">
 <meta property="og:image" content="https://silviotorre.github.io/media/silvio_torre_seaside.jpg">
 <meta property="og:url" content="https://silviotorre.github.io/">
@@ -26,20 +26,20 @@
 
 <!-- Twitter Cards -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Silvio Torre">
+<meta name="twitter:title" content="Silvio Torre: Tech, without getting lost.">
 <meta name="twitter:description" content="Certified IT professional with broad Azure, DevOps, AI, and Security expertise. Over 15 credentials, including ISO/IEC 27001. Explore my work and achievements.">
 <meta name="twitter:image" content="https://silviotorre.github.io/media/silvio_torre_seaside.jpg">
 
-<!-- (Facoltativo) Impostazione del colore per mobile browser -->
+<!-- Impostazione del colore per mobile browser -->
 <meta name="theme-color" content="#ffffff">
 
-<!-- (Facoltativo) Link canonico per SEO -->
+<!-- Link canonico per SEO -->
 <link rel="canonical" href="https://silviotorre.github.io/">
 
 
 
 
-  <title>Silvio Torre</title>
+  <title>Silvio Torre: Tech, without getting lost.</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
