--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 </head>
 <body>
   <header>
-    <h1>Silvio Torre</h1>
-    <h3>Broad IT, AI, DevOps & Cloud Certified Professional - 15+ Active Certifications.</h3>
+    <h1>Silvio Torre: Tech, without getting lost.</h1>
+    <h3>Broad IT, Security, AI, DevOps & Cloud Certified Professional - 15+ Active Certifications.</h3>
   </header>
   <main>
     <div class="content">
